--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 	--text2:#343A40; 
 	--hover-color:white;
 	--extra-one:#00B297;
+	--extra-two:#E9ECEF;
 	--shadow: 0 1px 4px 0px rgb(0 0 0 / 16%)
 }
 
@@ -25,6 +26,7 @@ h1,h2,h3,h4,h5,h6{
 }
 #checkbox_toggel{
 	display: none;
+	position: absolute;
 }
 #checkbox_toggel:checked ~ .left_side{
 	width: 50px;
@@ -32,12 +34,29 @@ h1,h2,h3,h4,h5,h6{
 #checkbox_toggel:checked ~ .left_side ul li span{
 	display: none;
 }
+#checkbox_toggel:checked ~ .left_side .brand h2{
+	display: none;
+}
+#checkbox_toggel:checked ~ .left_side .brand label{
+	display: block;
+	visibility: visible;
+}
+#checkbox_toggel:checked ~ .left_side .menu ul li a{
+	
+}
+#checkbox_toggel:checked ~ .right_side label{
+	display: none;
+}
 #checkbox_toggel:checked ~ .right_side{
 	margin-left: 50px;
 }
+#checkbox_toggel:checked ~  .right_side .header{
+	width:calc(100% - 60px);
+}
+
 .left_side{
 	margin: 0px;
-	padding: 0px;
+	padding:0px;
 	width: 250px;
 	height: 100%;
 	position: fixed;
@@ -73,7 +92,13 @@ h1,h2,h3,h4,h5,h6{
 	margin: 0px 0px;
 	padding: 0px;
 }
-
+.left_side .brand label{
+	display: none;
+	visibility: hidden;
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+}
 .left_side .menu{
 	background-color: var(--bg-color);
 	margin: 0px;
@@ -81,11 +106,13 @@ h1,h2,h3,h4,h5,h6{
 } 
 .left_side .menu ul{
 	margin: 0px;
-	padding: 10px;
+	padding: 20px 0px 40px 0px;
 }
 .left_side .menu ul li{
 	list-style-type: none;
+	position: relative;
 }
+
 .left_side .menu ul li a{
 	text-decoration: none;
 	padding: 10px 10px;
@@ -113,7 +140,6 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .right_side{
-	background-color: red;
 	margin-left: 250px;
 	padding: 0px;
 	transition: .3s;
@@ -125,6 +151,8 @@ h1,h2,h3,h4,h5,h6{
 	box-shadow: var(--shadow);
 	display: flex;
 	align-items: center;
+	position: fixed;
+	width:calc(100% - 265px);
 }
 .right_side .header .ham_menu{
 	display: flex;
@@ -183,6 +211,17 @@ h1,h2,h3,h4,h5,h6{
 	cursor: pointer;
 	padding: 10px 10px;
 	float: right;
+	position: relative;
+}
+.right_side .header .notification ul li:after{
+	position: absolute;
+	content: "";
+	height: 10px;
+	width: 10px;
+	top: 22%;
+	left: 59%;
+	border-radius: 50px;
+	background-color: red;
 }
 .right_side .header .profile{
 	display: flex;
@@ -210,4 +249,21 @@ h1,h2,h3,h4,h5,h6{
 	padding: 0px;
 	font-weight: 400;
 	font-size: 16px;
+}
+.main_area{
+	background-color: var(--extra-two);
+	height: 100vh;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	top: 0;
+	left: 0;
+}
+.main_area .card {
+	margin: 0px;
+	padding: 10px;
+}
+.main_area .card p{
+	margin: 0px;
+	padding: 0px;
 }
